added the final pages

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,7 +1,9 @@
 {{> header}}
-	{{#if userType}}
+
+	{{!-- {{#if userType}}
 	<p>the usertype is {{userType}}</p>
-	{{/if}}
+	{{/if}} --}}
+
 <div class="main_container">
 	{{{body}}}		
 </div>
