added email verification system

--- a/views/emails/verifyEmail.hbs
+++ b/views/emails/verifyEmail.hbs
@@ -3,5 +3,7 @@
 
     <p>Welcome to the Hotel California Website!</p>
 
-    <p>Click on <a href="{{url}}">this link</a> to activate your account.</p>
+    <p>Your activation code is {{options.activationCode}}</p>
+
+    <p>You can also click on <a href="{{url}}">this link</a> to activate your account.</p>
 </div>
