--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -33,7 +33,7 @@
                                 <li><a href="/dashboard/staff/inquiries">Inbox</a></li>
                             {{/notEqual}}
                         {{/if}}
-                        <li><a href="/devlinks">Devlinks (TODO: REMOVE)</a></li>
+                        {{!-- <li><a href="/devlinks">Devlinks (TODO: REMOVE)</a></li> --}}
                     </ul>
                 </div>
                 <div class="col-md-4">
