--- a/public/css/verifyCreateAccount.css
+++ b/public/css/verifyCreateAccount.css
@@ -60,8 +60,8 @@ p {
 
 .check-bg-circle {
     background-color: #198754;
-    width: 8em;
-    height: 8em;
+    width: 5em;
+    height: 5em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -70,15 +70,39 @@ p {
 }
 
 .svg-check{
-    width: 4.5em;
+    width: 3.5em;
 }
 
 .verification-details-container{
-    max-width: 22em;
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 26em;
 }
 
 .verification-details-container p{
     text-align: justify;
+}
+
+#verificationCodeForm {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    max-width: 26em;
+}
+
+#verificationSubmitButton {
+    margin-top: 1em;
+    width: 100%;
+    max-width: 14em;
+}
+
+.activation-code {
+    justify-content: center;
+    text-align: center;
+    letter-spacing: .3rem;
+    font-weight: 400;
 }
 
 .resend-text{
@@ -111,6 +135,19 @@ pointer-events: auto;
 color: blue;
 font-weight: 600;
 font-size: 0.95em;
+}
+
+.no-margin-header {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.email-section {
+    margin: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (max-width: 992px) {
