--- a/public/css/roomResults.css
+++ b/public/css/roomResults.css
@@ -58,6 +58,23 @@
     border-radius: 0.25em 0 0 0;
 }
 
+.r-image-placeholder {
+    background-color: #FFECC8;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.r-image-placeholder img{
+    height: 15em;
+    width: 15em;
+    object-fit: cover; 
+    display: block; 
+}
+
+
 .r-desc-container {
     /* background-color: crimson; */
     height: 10em;
@@ -244,6 +261,14 @@ svg {
     .r-hr-container hr{
         margin: 0;
         padding: 0;
+    }
+
+    .r-image-placeholder img{
+        height: 10em;
+        width: 10em; 
+    }
+    .r-image-placeholder{
+        padding: 2em;
     }
 
 }
